StyledEdit: draw the status bar with the panel text color

Hopefully this is the last piece of #4868.