src/apps/stylededit/StatusView.cpp
@@ -127,7 +127,6 @@ StatusView::Draw(BRect updateRect)
 	}
 
 	BRect bounds(Bounds());
-	rgb_color highColor = HighColor();
 	SetHighColor(tint_color(ViewColor(), B_DARKEN_2_TINT));
 	StrokeLine(bounds.LeftTop(), bounds.RightTop());
 
@@ -138,7 +137,7 @@ StatusView::Draw(BRect updateRect)
 	}
 
 	SetLowColor(ViewColor());
-	SetHighColor(highColor);
+	SetHighColor(ui_color(B_PANEL_TEXT_COLOR));
 
 	font_height fontHeight;
 	GetFontHeight(&fontHeight);
